Fix header layout overflow

--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -58,7 +58,7 @@ header {
     background-image: url("http://pedicuresalonfarla.nl/wp-content/uploads/2015/09/garda-202065_1920.jpg");
 
     /* Set a specific height */
-    height: 100%;
+    height: 90vh;
     min-height: 200px;
 
     /* Position and center the image to scale nicely on all screens */
